{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 109,
  "lineage": "e6e8e6da-7ccc-47ba-1998-07cc350224ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0630b5f8355625291",
            "arn": "arn:aws:ec2:us-east-1:872515286682:elastic-ip/eipalloc-0630b5f8355625291",
            "associate_with_private_ip": "10.82.3.11",
            "association_id": "eipassoc-0d316cb1f4052dd41",
            "domain": "vpc",
            "id": "eipalloc-0630b5f8355625291",
            "instance": "i-06a4f14f9cdc11224",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0236eb5dea3dcff2b",
            "private_dns": "ip-10-82-3-11.ec2.internal",
            "private_ip": "10.82.3.11",
            "public_dns": "ec2-54-85-137-119.compute-1.amazonaws.com",
            "public_ip": "54.85.137.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.test_nic",
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_ser",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b10e08d247fb927",
            "arn": "arn:aws:ec2:us-east-1:872515286682:instance/i-06a4f14f9cdc11224",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a4f14f9cdc11224",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0236eb5dea3dcff2b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0236eb5dea3dcff2b",
            "private_dns": "ip-10-82-3-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.82.3.11",
            "public_ip": "54.85.137.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-001f361af4b542504",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af6657d2032b5047",
            "tags": {
              "Name": "test_ser"
            },
            "tags_all": {
              "Name": "test_ser"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0456583aeb0d15955"
            ]
          },
          "dependencies": [
            "aws_network_interface.test_nic",
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:internet-gateway/igw-04e3e8609e22f5bb6",
            "id": "igw-04e3e8609e22f5bb6",
            "owner_id": "872515286682",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-07ad1964b5223e894"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:network-interface/eni-0236eb5dea3dcff2b",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c7347091deaa471b",
                "device_index": 0,
                "instance": "i-06a4f14f9cdc11224"
              }
            ],
            "id": "eni-0236eb5dea3dcff2b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:36:dc:74:54:65",
            "owner_id": "872515286682",
            "private_ip": "10.82.3.11",
            "private_ip_list": [
              "10.82.3.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.82.3.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0456583aeb0d15955"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af6657d2032b5047",
            "tags": {
              "Name": "test_nic"
            },
            "tags_all": {
              "Name": "test_nic"
            }
          },
          "dependencies": [
            "aws_security_group.test_sg",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:route-table/rtb-0239a8c7314ec3167",
            "id": "rtb-0239a8c7314ec3167",
            "owner_id": "872515286682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e3e8609e22f5bb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_rt"
            },
            "tags_all": {
              "Name": "test_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ad1964b5223e894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13a880a974646e0",
            "route_table_id": "rtb-0239a8c7314ec3167",
            "subnet_id": "subnet-0af6657d2032b5047"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_rt",
            "aws_subnet.test_sn",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:security-group/sg-0456583aeb0d15955",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0456583aeb0d15955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250306105056901100000001",
            "name_prefix": "terraform-",
            "owner_id": "872515286682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_sg"
            },
            "tags_all": {
              "Name": "test_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ad1964b5223e894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:subnet/subnet-0af6657d2032b5047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.82.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af6657d2032b5047",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515286682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_sn"
            },
            "tags_all": {
              "Name": "test_sn"
            },
            "vpc_id": "vpc-07ad1964b5223e894"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515286682:vpc/vpc-07ad1964b5223e894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.82.0.0/16",
            "default_network_acl_id": "acl-08d6b24e355374a20",
            "default_route_table_id": "rtb-010c0180bd8052345",
            "default_security_group_id": "sg-0fa2db563980c0857",
            "dhcp_options_id": "dopt-0e3f4eb42adeeaa00",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ad1964b5223e894",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010c0180bd8052345",
            "owner_id": "872515286682",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}